- Began restructuring body content - Further layout and stying updates pending

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     -->
     <title>Counter App</title><!-- Title-->
     <body>
-      <h1>Counter App</h1>
+      <h1>Counter App</h1><!--WIP: Updated body structure-->
       <p>by Jael Roman</p>
       <div id="root"></div>
     </body>
